cmake_minimum_required(VERSION 3.10)
project(mas)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(exec_name ${PROJECT_NAME}.out)
add_executable(${exec_name} mas.cpp)
add_library(classes STATIC classes.cpp)
add_library(revenue STATIC revenue.cpp)
target_link_libraries(${exec_name} classes revenue)